add sort and update tasks
