# go-auth/jwt-auth/docs/swagger.yaml
@@ -38,6 +38,37 @@ definitions:
     - email
     - password
     type: object
+  entities.Task:
+    properties:
+      createdAt:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+      updatedAt:
+        type: string
+      userId:
+        type: string
+    type: object
+  pagination.PaginationResult-entities_Task:
+    properties:
+      Err: {}
+      hasNextPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/entities.Task'
+        type: array
+      pageCurrent:
+        type: integer
+      totalItems:
+        type: integer
+      totalPages:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -46,6 +77,56 @@ info:
   version: "1.0"
 paths:
   /tasks:
+    get:
+      consumes:
+      - application/json
+      description: Get task pagination from the API
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Number of records per page
+        in: query
+        name: limitPage
+        type: integer
+      - description: Search by which task property
+        in: query
+        name: searchField
+        type: string
+      - description: Search by value of the task property
+        in: query
+        name: searchValue
+        type: string
+      - description: Sort by which task property
+        in: query
+        name: sortField
+        type: string
+      - description: Sorting
+        enum:
+        - ascending
+        - descending
+        in: query
+        name: sortOrder
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Task list
+          schema:
+            items:
+              $ref: '#/definitions/pagination.PaginationResult-entities_Task'
+            type: array
+        "400":
+          description: Validation error
+          schema:
+            $ref: '#/definitions/dtos.APIError'
+      security:
+      - BearerAuth: []
+      summary: Get task pagination
+      tags:
+      - tasks
     post:
       consumes:
       - application/json
@@ -103,6 +184,39 @@ paths:
       security:
       - BearerAuth: []
       summary: Get task by id
+      tags:
+      - tasks
+    put:
+      consumes:
+      - application/json
+      description: Edit a task by its Id
+      parameters:
+      - description: Task Id
+        example: '"60c72b2f9b1d8b57b8ed2123"'
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User data
+        in: body
+        name: task
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.Task'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Task by id
+          schema:
+            $ref: '#/definitions/dtos.Message'
+        "400":
+          description: Validation error
+          schema:
+            $ref: '#/definitions/dtos.APIError'
+      security:
+      - BearerAuth: []
+      summary: Edit task by Id
       tags:
       - tasks
   /users:
